--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -37,7 +37,7 @@ html {
 
 /* 3. body 기본 설정 */
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   font-weight: 400;
   word-break: break-word;
   -webkit-overflow-scrolling: touch;
