--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -182,13 +182,28 @@ main {
 .sec3 .swiper .swiper-slide .swiper--link {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 6px;
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 10px;
+  padding: 7px;
   width: 100%;
   height: 100%;
+}
+.sec3 .swiper .swiper-slide .swiper--link .title{
+  font-size: 18px;
+  padding: 5px 18px;
+  background: var(--point-color);
+  border-radius: 10px;
+  color: #fff;
+  font-weight: 700;
+}
+.sec3 .swiper .swiper-slide .swiper--link .desc{
+  margin-bottom: 10px;
+}
+.sec3 .swiper .swiper-slide .swiper--link .desc span{
+  color: var(--point-color);
+  font-size: 20px;
 }
 .sec3 .swiper .img--block {
   width: 100%;
