--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,19 +1,18 @@
 @font-face {
     font-family: 'OkDanDan';
-    src: url('./fonts/OkDanDan-Bold.otf') format('opentype');
-    src: url('/assets/fonts/OkDanDan-Bold.otf') format('opentype');
+    src: url('../fonts/OkDanDan-Bold.otf') format('opentype');
     font-weight: 800;
     /* font-style: normal; */
 }
 @font-face {
     font-family: 'Hakgyoansim';
-    src: url('/assets/fonts/Hakgyoansim-Allimjang-OTF-B.otf') format('opentype');
+    src: url('../fonts/Hakgyoansim-Allimjang-OTF-B.otf') format('opentype');
     font-weight: 700;
     /* font-style: normal; */
 }
 @font-face {
     font-family: 'Hakgyoansim';
-    src: url('/assets/fonts/Hakgyoansim-Allimjang-OTF-R.otf') format('opentype');
+    src: url('../fonts/Hakgyoansim-Allimjang-OTF-R.otf') format('opentype');
     font-weight: 500;
     /* font-style: normal; */
 }
