--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -190,7 +190,7 @@ main {
   width: 100%;
   height: 100%;
 }
-.sec3 .swiper .swiper-slide .swiper--link .title{
+.sec3 .swiper .swiper-slide .swiper--link .title {
   font-size: 18px;
   padding: 5px 18px;
   background: var(--point-color);
@@ -198,10 +198,10 @@ main {
   color: #fff;
   font-weight: 700;
 }
-.sec3 .swiper .swiper-slide .swiper--link .desc{
+.sec3 .swiper .swiper-slide .swiper--link .desc {
   margin-bottom: 10px;
 }
-.sec3 .swiper .swiper-slide .swiper--link .desc span{
+.sec3 .swiper .swiper-slide .swiper--link .desc span {
   color: var(--point-color);
   font-size: 20px;
 }
@@ -237,4 +237,30 @@ main {
   .sec3 .swiper-scrollbar {
     display: none !important;
   }
+}
+
+@media screen and (max-width: 576px) {
+  .sec3 .swiper .swiper-slide .swiper--link .title {
+    font-size: 15px;
+    padding: 3px 10px;
+  }
+  .sec3 .swiper .swiper-slide .swiper--link .desc {
+    margin-bottom: 5px;
+    font-size: 12px;
+  }
+  .sec3 .swiper .swiper-slide .swiper--link .desc span {
+    font-size: 16px;
+  }
+
+
+  .sec3 .btn{
+    width: 20px;
+    height: 20px;
+  }
+  .sec3 .btn.next{}
+  .sec3 .btn.prev{}
+
+
+
+
 }
