--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -7,7 +7,7 @@ ADVANCED RESET.CSS + TYPOGRAPHY
 
 :root{
   /* --zone01-main--color: #EC8144; */
-  --point-color: #ff741e;
+  --point-color: #e77a55;
 }
 /* 1. 박스 모델 초기화 */
 *,
