--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,7 @@ main {
 }
 
 .wrapper {
+  position: relative;
   max-width: 1400px;
   height: 100%;
   margin: 0 auto;
@@ -18,6 +19,7 @@ main {
   height: 100vh;
   z-index: 0;
   filter: blur(20px);
+  opacity: 0.25;
 }
 /* sec1 */
 .sec1,
@@ -241,3 +243,29 @@ main {
     left: 50px;
   }
 }
+
+.layer-wrap {
+  position: fixed;
+  inset: 0;
+  display: none;
+  justify-content: center;
+  align-items: flex-start; /* ⬅ 가운데 NO, 위에서 시작하게 */
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
+  z-index: 9999;
+  padding: 10px;
+  overflow-y: auto; /* ⬅ 부모에서도 스크롤 가능 */
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+.layer-content {
+  background: transparent;
+  width: 100%;
+  max-width: 100%;
+  border-radius: 20px;
+  margin: 60px auto; /* 화면 위 아래 공간 확보 */
+  max-height: none; /* 제한 없애기 */
+  transition: all .4s ease;
+}
+
